Fix some bugs and meets the needs.
1. add the detailed tooltips of URL in URLl list with ellipsis
2. change components of some diagrams as bottom mentioned.
3. add verification(cache related) on both front-end and back-end.
4. partly supported min length as bottom mentioned.

--- a/css/style.css
+++ b/css/style.css
@@ -296,6 +296,16 @@ ul.sub-list >li > a >p:active {
 .error-rate-table{
   margin: 5px;
 }
+.error-rate-table-title{
+    color: #333333;
+    font-size: 18px;
+    font-weight: bold;
+    width: 1274px;
+
+    text-align: center;
+    align:center;
+    margin: 0px;
+}
 tr th{
   font-family: Arial, sans-serif;
   font-weight: bold;
